Add config option for showing timer outside canvas

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -35,5 +35,7 @@ msg_canvasleave: "&cYou left the canvas!"
 msg_noteleport: "&cPlease leave the canvas before teleporting out."
 
 
+show_timer_outside_canvas: true
+
 ##Do not touch this unless you know what you are doing!
 canvas: "null"
