Add config option for toggling canvas enter/leave messages

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -36,6 +36,7 @@ msg_noteleport: "&cPlease leave the canvas before teleporting out."
 
 
 show_timer_outside_canvas: true
+canvas_enter_leave_message: true
 
 ##Do not touch this unless you know what you are doing!
 canvas: "null"
