--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ version: '${project.version}'
 main: me.evilterabite.rplace.RPlace
 api-version: 1.17
 authors: [ evilterabite ]
+softdepend: [ PvPManager ]
 description: Reddit's R/Place subreddit from 2017 and 2022 in Minecraft
 
 commands:
